RESOLVED FIXED123539
Decorated text sometimes does not draw its decorations
https://bugs.webkit.org/show_bug.cgi?id=123539
Summary Decorated text sometimes does not draw its decorations
Myles C. Maxfield
Reported 2013-10-30 16:34:45 PDT
Decorated text sometimes does not draw its decorations
Attachments
Patch (1.50 KB, patch)
2013-10-30 16:36 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion (623.76 KB, application/zip)
2013-10-30 17:21 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (516.02 KB, application/zip)
2013-10-30 19:27 PDT, Build Bot
no flags
Patch (1.54 KB, patch)
2013-10-31 11:33 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2013-10-30 16:36:15 PDT
Build Bot
Comment 2 2013-10-30 17:21:51 PDT
Comment on attachment 215572 [details] Patch Attachment 215572 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/16058367 New failing tests: fast/css/text-decoration-in-descendants.html
Build Bot
Comment 3 2013-10-30 17:21:53 PDT
Created attachment 215581 [details] Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 4 2013-10-30 19:27:20 PDT
Comment on attachment 215572 [details] Patch Attachment 215572 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/17058360 New failing tests: fast/css/text-decoration-in-descendants.html
Build Bot
Comment 5 2013-10-30 19:27:23 PDT
Created attachment 215599 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Antti Koivisto
Comment 6 2013-10-31 11:09:54 PDT
Comment on attachment 215572 [details] Patch This should probably look into textDecorationsInEffect() instead
Myles C. Maxfield
Comment 7 2013-10-31 11:33:58 PDT
Myles C. Maxfield
Comment 8 2013-10-31 11:36:16 PDT
*** Bug 123410 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 9 2013-10-31 11:45:15 PDT
Comment on attachment 215661 [details] Patch Clearing flags on attachment: 215661 Committed r158379: <http://trac.webkit.org/changeset/158379>
WebKit Commit Bot
Comment 10 2013-10-31 11:45:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.