Decorated text sometimes does not draw its decorations https://bugs.webkit.org/show_bug.cgi?id=123539

Patch by Myles C. Maxfield <mmaxfield@apple.com> on 2013-10-31
Reviewed by Antti Koivisto.

Decorated text should opt-out of the simple line layout, because
SimpleLineLayout::paintFlow doesn't draw decorations

Fixes fast/css3-text/css3-text-decoration/text-decoration-color.html

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::canUseFor):

Canonical link: https://commits.webkit.org/141745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158379 268f45cc-cd09-0410-ab3c-d52691b4dbfc